# dead-pixel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
DeadPixel/: CMakeLists.txt  DeadPixel.h  dppch.h
DeadPixel/Core/: Application.cpp  Application.h  Assert.h  EntryPoint.h  Layer.h  LayerStack.h  Log.cpp  Log.h  Platform.h  Pointer.h  Window.cpp  Window.h
DeadPixel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
DeadPixel/GFX/: API.h  Buffer.h  Camera.h  GraphicsContext.h  Shader.h
DeadPixel/GFX/OpenGL/: GLBuffer.cpp  GLGraphicsContext.cpp  GLShader.cpp
DeadPixel/Platform/Generic/: GenericWindow.cpp  GenericWindow.h
DeadPixel/Renderer/: Buffer.cpp  Buffer.h  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
DeadPixel/Renderer/API/: GraphicsAPI.cpp  GraphicsAPI.h  GraphicsContext.h
DeadPixel/Renderer/API/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLContext.cpp  GLContext.h  GLGraphicsAPI.cpp  GLGraphicsAPI.h  GLShader.cpp  GLShader.h  GLVertexArray.cpp  GLVertexArray.h
DeadPixel/Window/: Window.cpp  Window.h
Editor/: CMakeLists.txt  main.cpp
Game/: CMakeLists.txt  GameApp.cpp  GameLayer.cpp  GameLayer.h
Sandbox/: CMakeLists.txt  main.cpp
dead_pixel/: CMakeLists.txt  dead_pixel.hh  dead_pixel_entry.hh
dead_pixel/BCore/: application.hh  assert.hh  core.hh  layer.cc  layer_stack.cc  log.cc  log.hh  memory.hh  window.hh
dead_pixel/BEvents/: application_event.hh  event.hh
dead_pixel/BGFX/: camera.cc  renderer.hh  shader.hh  vertex_array.hh
dead_pixel/BGFX/open_gl/: gl_buffer.cc  gl_renderer.cc  gl_vertex_array.cc
dead_pixel/BPlatform/BGeneric/: generic_window.cc
dead_pixel/core/: application.cc  application.hh  arena_allocator.hh  assert.hh  events.hh  file_utils.cc  file_utils.hh  imgui_layer.cc  imgui_layer.hh  input.hh  input_codes.hh  json_parser.cc  json_parser.hh  keycode.hh  layer.cc  layer.hh  layer_stack.cc  layer_stack.hh  log.cc  log.hh  mouse_code.hh  scene.cc  scene.hh  scene_data.hh  time.hh  types.hh  uuid.cc  uuid.hh  window.hh
dead_pixel/default_assets/meshes/: cube.json
dead_pixel/default_assets/shaders/: default.frag  default.vert
dead_pixel/entity_system/: entity.hh  entity_context.cc  entity_context.hh
dead_pixel/entity_system/components/: bitmasks.hh  mesh_component.cc  mesh_component.hh  transform_component.hh
dead_pixel/events/: application_event.hh  event.hh  key_event.hh  mouse_event.hh
dead_pixel/gfx/: buffer.hh  camera.cc  camera.hh  editor_camera.cc  editor_camera.hh  framebuffer.hh  graphics_context.hh  renderer.hh  shader.hh  texture.hh  vertex_array.hh
dead_pixel/gfx/api/opengl/: gl_buffer.cc  gl_framebuffer.cc  gl_graphics_context.cc  gl_renderer.cc  gl_shader.cc  gl_texture.cc  gl_vertex_array.cc  imgui_static.cc
dead_pixel/gfx/gltf/: gltf_parser.cc  gltf_parser.hh  gltf_spec.hh
dead_pixel/gfx/open_gl/: gl_buffer.cc  gl_graphics_context.cc  gl_renderer.cc  gl_shader.cc  gl_vertex_array.cc
dead_pixel/gfx/ui/: ui.cc  ui.hh  ui_default.frag  ui_default.vert  ui_renderer.cc  ui_renderer.hh  ui_theme.hh
dead_pixel/platform/generic/: generic_input.cc  generic_time.cc  generic_window.cc
dp_editor/: CMakeLists.txt  editor_app.cc  editor_layer.cc  editor_layer.hh
dp_editor/assets/shaders/: basic_cube.frag
editor/: CMakeLists.txt  editor_layer.cc  editor_layer.hh  imgui.ini  imgui_layer.cc  imgui_layer.hh  main.cc  panels.cc  panels.hh  test_scene.cc  test_scene.hh
editor/assets/shaders/: grid.frag  grid.vert
editor/shaders/: basic_cube.vert
gravity_game/: CMakeLists.txt  game_app.cc  game_layer.cc  game_layer.hh
gravity_game/BAssets/BShaders/: 2d_generic.frag  2d_generic.vert
gravity_game/assets/shaders/: basic_cube.frag  basic_cube.vert
